Bug 471189 - After click on "Choose new location" button, file open dialog opens instead of folder selector
Summary: After click on "Choose new location" button, file open dialog opens instead o...
Status: RESOLVED FIXED
Alias: None
Product: plasma-integration
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR major
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-06-18 12:13 UTC by Patrick Silva
Modified: 2023-07-08 12:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (156.88 KB, image/png)
2023-06-18 12:13 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-06-18 12:13:24 UTC
Created attachment 159759 [details]
screenshot

STEPS TO REPRODUCE
1. open Locations KCM
2. click on the button any path
3. 

OBSERVED RESULT
file open dialog seen in the attached screenshot opens

EXPECTED RESULT
folder selector opens

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.5.1
Graphics Platform: Wayland
Comment 1 Justin Zobel 2023-06-19 16:16:45 UTC
Can confirm.
Comment 2 Nate Graham 2023-06-21 03:51:32 UTC
Can also reproduce with the File Search KCM. Seems like it could be a generic problem in Plasma Integration.
Comment 3 Bug Janitor Service 2023-07-05 12:43:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-integration/-/merge_requests/94
Comment 4 Nicolas Fella 2023-07-08 12:08:23 UTC
Git commit d8fa1e537fcaaf0d02c52db1f1fbebe00e5287fa by Nicolas Fella.
Committed on 08/07/2023 at 12:03.
Pushed by nicolasfella into branch 'master'.

Fix showing directory chooser dialog

M  +3    -1    src/platformtheme/kdeplatformfiledialoghelper.cpp

https://invent.kde.org/plasma/plasma-integration/-/commit/d8fa1e537fcaaf0d02c52db1f1fbebe00e5287fa