Fix showing directory chooser dialog

BUG: 471189